# Facial-Emotion-Recognition

./: facial-emotion-accuracy.py  pyproject.toml  requirements.txt
