[tool.poetry]
name = "facial-emotion-recognition"
version = "0.1.0"
description = ""
authors = ["Alexis Cureno <alexis.cureno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
